# Sparkles

./: .env.example  .gitignore  DEVELOPER.md  METHODOLOGY.md  README.md  plan.md  pyproject.toml
.cursor/rules/: sparkles-api-credits.mdc  sparkles-iterative-plan.mdc
artifacts/: experiments.jsonl
configs/examples/: journal_trades.example.csv
configs/experiments/: rklb_baseline.yaml  rklb_daytrade_v1.yaml  rklb_daytrade_v2.yaml  rklb_daytrade_v3.yaml
data/journal/: README.md
docs/: ML_EXPANSION.md  README.md  Training_Stats.md  personal_notes.md  plan-phase2-01-data-ingest.md  plan-phase2-02-inference-runtime.md  plan-phase2-03-state-ui-journal.md  plan-phase2-overview.md  plan-robinhood-agent-growth.md
notebooks/: sparkles_train_console.ipynb
scripts/: README.md  quick_try_vol.py  run_grid_search.py  run_trials.py
sparkles/: __init__.py  cli.py  env.py
sparkles/backtest/: __init__.py  meta_label.py  pnl.py  threshold_sweep.py  val_backtest.py
sparkles/config/: __init__.py  grid.py  grid_runner.py  load.py  schema.py
sparkles/data/: __init__.py  context_ingest.py  ingest.py  retry.py  symbol_hints.py  twelvedata_client.py
sparkles/features/: __init__.py  builders.py  dataset.py  intraday.py  market_context.py  market_data.py  microstructure.py  order_flow.py  registry.py  session.py  technical.py  time.py  volatility.py
sparkles/journal/: __init__.py  compare.py
sparkles/labels/: __init__.py  triple_barrier.py  types.py
sparkles/models/: __init__.py  estimators.py  evaluation.py  predictions_export.py  preprocess.py  registry.py  (+2 more)
tests/: test_config_merge.py  test_dataset.py  test_day_trade_ledger.py  test_daytrade_config.py  test_env.py  test_estimators.py  test_evaluation.py  test_experiments_csv.py  test_g3_features.py  test_grid_runner.py  test_grid_search.py  test_ingest_incremental.py  test_ingest_targets.py  test_ingest_windows.py  test_intraday_features.py  test_live_ingest_config.py  test_market_context_tz.py  test_meta_label.py  test_order_flow_features.py  test_predictions_journal.py  test_preprocess.py  test_reporting.py  test_retry_credits.py  test_sample_weights.py  test_schema_features.py  test_session_features.py  test_technical_features.py  test_threshold_sweep.py  test_train_smoke.py  test_triple_barrier.py  test_val_backtest.py  test_volatility.py
(+26 files in other folders)
