[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkles"
version = "0.1.0"
description = "Phase 1 swing ML pipeline (RKLB, triple barrier, day-trade cap)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.5",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "typer>=0.9",
    "twelvedata>=1.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pandas-stubs>=2.0",
    "pytest>=7.4",
    "ruff>=0.2",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
]
ml = [
    "xgboost>=2.0",
]

[project.scripts]
sparkles = "sparkles.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["sparkles"]

[[tool.mypy.overrides]]
module = [
    "twelvedata",
    "twelvedata.http_client",
    "twelvedata.exceptions",
    "joblib",
    "sklearn.linear_model",
    "sklearn.metrics",
    "sklearn.preprocessing",
    "sklearn.utils.class_weight",
]
ignore_missing_imports = true
